--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
     <header class="header">
       <div class="header__row">
         <a href="/" class="header__logo">
-          <img src="images/logo.png" srcset="images/logo2x.png 2x, images/logo3x.png 3x" alt="header__logo-img" class="Руссинвест" />
+          <img src="images/logo.png" srcset="images/logo@2x.png 2x, images/logo@3x.png 3x" alt="header__logo-img" class="Руссинвест" />
         </a>
         <div class="header__col header__col--nav">
           <nav class="nav">
@@ -212,7 +212,7 @@
       <div class="pillar-list offset-base">
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/moodys.png" srcset="uploads/moodys2x.png 2x, uploads/moodys3x.png 3x" alt="" />
+            <img src="uploads/moodys.png" srcset="uploads/moodys@2x.png 2x, uploads/moodys@3x.png 3x" alt="" />
           </div>
           <a href="/" class="pillar__title">Рейтинг Moody’s</a>
           <div class="pillar__text">Долгосрочные рейтинги в&nbsp;национальной и&nbsp;иностранной валюте на&nbsp;уровне&nbsp;B2</div>
@@ -222,7 +222,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/nra.png" srcset="uploads/nra2x.png 2x, uploads/nra3x.png 3x" alt="" />
+            <img src="uploads/nra.png" srcset="uploads/nra@2x.png 2x, uploads/nra@3x.png 3x" alt="" />
           </div>
           <a href="/" class="pillar__title">Национальное рейтинговое агентство</a>
           <div class="pillar__text">Рейтинг надежности инвестиционной компании &laquo;АА&raquo; со&nbsp;стабильным прогнозом.</div>
@@ -230,7 +230,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a.png" srcset="uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a2x.png 2x, uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a3x.png 3x" alt="" />
+            <img src="uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a.png" srcset="uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a@2x.png 2x, uploads/97-f-33-cc-2-df-5-a-4-d-80-a-23-c-b-433903-d-262-a@3x.png 3x" alt="" />
           </div>
           <a href="/" class="pillar__title">НРКУ</a>
           <div class="pillar__text">Быстрое решение всех вопросов, Вас не&nbsp;гоняют по&nbsp;разным отделам</div>
@@ -238,7 +238,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/bitmap.png" srcset="uploads/bitmap2x.png 2x, uploads/bitmap3x.png 3x" alt="" />
+            <img src="uploads/bitmap.png" srcset="uploads/bitmap@2x.png 2x, uploads/bitmap@3x.png 3x" alt="" />
           </div>
           <a href="/" class="pillar__title">НАУФОР</a>
           <div class="pillar__text">ПАО &laquo;ИК&nbsp;РУСС-ИНВЕСТ&raquo; является членом НАУФОР, участником торгов ПАО Московская Биржа.</div>
@@ -246,7 +246,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/bitmap11.png" srcset="uploads/bitmap112x.png 2x, uploads/bitmap113x.png 3x" alt="" />
+            <img src="uploads/bitmap11.png" srcset="uploads/bitmap11@2x.png 2x, uploads/bitmap11@3x.png 3x" alt="" />
           </div>
           <a href="/" class="pillar__title">Финансовый Олимп</a>
           <div class="pillar__text">Лауреат национальной премии &laquo;Финансовый Олимп&nbsp;&mdash; 2010&raquo; в&nbsp;номинации &laquo;Стратегия инвестирования&raquo;.</div>
@@ -262,7 +262,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/group-20.png" srcset="uploads/group-202x.png 2x, uploads/group-203x.png 3x" alt="" />
+                <img src="uploads/group-20.png" srcset="uploads/group-20@2x.png 2x, uploads/group-20@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Брокерское обслуживание</a>
             </div>
@@ -271,7 +271,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/icons.png" srcset="uploads/icons2x.png 2x, uploads/icons3x.png 3x" alt="" />
+                <img src="uploads/icons.png" srcset="uploads/icons@2x.png 2x, uploads/icons@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Доверительное управление</a>
             </div>
@@ -280,7 +280,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/globe-1-4.png" srcset="uploads/globe-1-42x.png 2x, uploads/globe-1-43x.png 3x" alt="" />
+                <img src="uploads/globe-1-4.png" srcset="uploads/globe-1-4@2x.png 2x, uploads/globe-1-4@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Интернет-трейдинг</a>
             </div>
@@ -289,7 +289,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/briefcase2.png" srcset="uploads/briefcase22x.png 2x, uploads/briefcase23x.png 3x" alt="" />
+                <img src="uploads/briefcase2.png" srcset="uploads/briefcase2@2x.png 2x, uploads/briefcase2@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Услуги для субброкеров и&nbsp;агентов</a>
             </div>
@@ -298,7 +298,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/shape.png" srcset="uploads/shape2x.png 2x, uploads/shape3x.png 3x" alt="" />
+                <img src="uploads/shape.png" srcset="uploads/shape@2x.png 2x, uploads/shape@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Депозитарное обслуживание</a>
             </div>
@@ -307,7 +307,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/group_19.png" srcset="uploads/group_192x.png 2x, uploads/group_193x.png 3x" alt="" />
+                <img src="uploads/group_19.png" srcset="uploads/group_19@2x.png 2x, uploads/group_19@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Выпуск ценных бумаг</a>
             </div>
@@ -316,7 +316,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/30_st_mary_axe.png" srcset="uploads/30_st_mary_axe2x.png 2x, uploads/30_st_mary_axe3x.png 3x" alt="" />
+                <img src="uploads/30_st_mary_axe.png" srcset="uploads/30_st_mary_axe@2x.png 2x, uploads/30_st_mary_axe@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Корпоративное финансирование</a>
             </div>
@@ -325,7 +325,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/group_21.png" srcset="uploads/group_212x.png 2x, uploads/group_213x.png 3x" alt="" />
+                <img src="uploads/group_21.png" srcset="uploads/group_21@2x.png 2x, uploads/group_21@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Финансовое консультирование</a>
             </div>
@@ -334,7 +334,7 @@
           <div class="service-slider__item">
             <div class="service">
               <div class="service__image">
-                <img src="uploads/coin.png" srcset="uploads/coin2x.png 2x, uploads/coin3x.png 3x" alt="" />
+                <img src="uploads/coin.png" srcset="uploads/coin@2x.png 2x, uploads/coin@3x.png 3x" alt="" />
               </div>
               <a href="/" class="service__title">Реализация венчурных проектов</a>
             </div>
@@ -355,7 +355,7 @@
                   <div class="person-extended__aside">
                     <div class="person person--large">
                       <div class="person__image">
-                        <img src="uploads/bitmap-copy-61.jpg" srcset="uploads/bitmap-copy-612x.jpg 2x, uploads/bitmap-copy-613x.jpg 3x" alt="" />
+                        <img src="uploads/bitmap-copy-61.jpg" srcset="uploads/bitmap-copy-61@2x.jpg 2x, uploads/bitmap-copy-61@3x.jpg 3x" alt="" />
                       </div>
                       <div class="person__data">
                         <div class="person__name">Александр Петрович Бычков</div>
@@ -379,7 +379,7 @@
                   <div class="person-extended__aside">
                     <div class="person person--large">
                       <div class="person__image">
-                        <img src="uploads/bitmap-copy-62.jpg" srcset="uploads/bitmap-copy-622x.jpg 2x, uploads/bitmap-copy-623x.jpg 3x" alt="" />
+                        <img src="uploads/bitmap-copy-62.jpg" srcset="uploads/bitmap-copy-62@2x.jpg 2x, uploads/bitmap-copy-62@3x.jpg 3x" alt="" />
                       </div>
                       <div class="person__data">
                         <div class="person__name">Александр Тельманович Арутюнян</div>
@@ -402,7 +402,7 @@
                   <div class="person-extended__aside">
                     <div class="person person--large">
                       <div class="person__image">
-                        <img src="uploads/bitmap-copy-63.jpg" srcset="uploads/bitmap-copy-632x.jpg 2x, uploads/bitmap-copy-633x.jpg 3x" alt="" />
+                        <img src="uploads/bitmap-copy-63.jpg" srcset="uploads/bitmap-copy-63@2x.jpg 2x, uploads/bitmap-copy-63@3x.jpg 3x" alt="" />
                       </div>
                       <div class="person__data">
                         <div class="person__name">Нэлли Аркадьевна Карабанова</div>
@@ -425,7 +425,7 @@
               <div class="person-list__item  is-active">
                 <div class="person">
                   <div class="person__image">
-                    <img src="uploads/bitmap-copy-61.jpg" srcset="uploads/bitmap-copy-612x.jpg 2x, uploads/bitmap-copy-613x.jpg 3x" alt="" />
+                    <img src="uploads/bitmap-copy-61.jpg" srcset="uploads/bitmap-copy-61@2x.jpg 2x, uploads/bitmap-copy-61@3x.jpg 3x" alt="" />
                   </div>
                   <div class="person__data">
                     <div class="person__name">Александр Петрович Бычков</div>
@@ -436,7 +436,7 @@
               <div class="person-list__item ">
                 <div class="person">
                   <div class="person__image">
-                    <img src="uploads/bitmap-copy-62.jpg" srcset="uploads/bitmap-copy-622x.jpg 2x, uploads/bitmap-copy-623x.jpg 3x" alt="" />
+                    <img src="uploads/bitmap-copy-62.jpg" srcset="uploads/bitmap-copy-62@2x.jpg 2x, uploads/bitmap-copy-62@3x.jpg 3x" alt="" />
                   </div>
                   <div class="person__data">
                     <div class="person__name">Александр Тельманович Арутюнян</div>
@@ -447,7 +447,7 @@
               <div class="person-list__item ">
                 <div class="person">
                   <div class="person__image">
-                    <img src="uploads/bitmap-copy-63.jpg" srcset="uploads/bitmap-copy-632x.jpg 2x, uploads/bitmap-copy-633x.jpg 3x" alt="" />
+                    <img src="uploads/bitmap-copy-63.jpg" srcset="uploads/bitmap-copy-63@2x.jpg 2x, uploads/bitmap-copy-63@3x.jpg 3x" alt="" />
                   </div>
                   <div class="person__data">
                     <div class="person__name">Нэлли Аркадьевна Карабанова</div>
@@ -543,7 +543,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo2x.jpg 2x, uploads/AM-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo@2x.jpg 2x, uploads/AM-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Ассоциация Менеджеров</span>
@@ -554,7 +554,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo2x.jpg 2x, uploads/RSPP-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo@2x.jpg 2x, uploads/RSPP-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Российский союз промышленников и&nbsp;предпринимателей</span>
@@ -565,7 +565,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo2x.jpg 2x, uploads/API-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo@2x.jpg 2x, uploads/API-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">АССОЦИАЦИЯ ПРОФЕССИОНАЛЬНЫХ ИНВЕСТОРОВ</span>
@@ -622,156 +622,10 @@
     </div>
   </footer>
 
-  <!--  PageList  -->
-  <style>
-    #pagelist {
-      position: fixed;
-      width: 320px;
-      background-color: #272c31;
-      background: repeating-linear-gradient(
-        45deg,
-        #272c31,
-        #272c31 10px,
-        #2b3136 10px,
-        #2b3136 20px
-      );
-      top: 0;
-      bottom: 0;
-      z-index: 2;
-      font-family: inherit;
-      transform: translateX(-100%);
-      transition: transform .5s, box-shadow .3s;
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0);
-    }
-  
-    #pagelist ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-  
-    #pagelist ul li {
-      display: block;
-    }
-  
-    input[name="__pageListInput"] {
-      display: none;
-      
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist {
-      transform: translateX(0);
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0.27);
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist label {
-      opacity: 1;
-    }
-  
-    #pagelist ul li a{
-      display: block;
-      color: #fff;
-      text-decoration: none;
-      padding: 16px 20px;
-  
-      font-size: 14px;
-      line-height: 18px;
-      transition: color .3s, background-color .3s;
-      border-bottom: 1px solid rgba(255, 255, 255, .05);
-    }
-  
-    #pagelist ul li a:hover {
-      background-color: rgba(0, 0, 0, .35);
-      color: #fff;
-    }
-  
-    #pagelist label{
-      position: absolute;
-      height: 38px;
-      line-height: 36px;
-      background-color: #272c31;
-      left: 100%;
-      top: 0;
-      cursor: pointer;
-      padding-left: 20px;
-      padding-right: 40px;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      font-weight: bold;
-      opacity: .5;
-      transition: opacity .3s;
-      border-top-right-radius: 18px;
-      border-bottom-right-radius: 18px;
-      white-space: nowrap;
-    }
-  
-    #pagelist label span {
-      display: inline-block;
-      vertical-align: middle;
-      background-color: #fff;
-      color: #000;
-      position: absolute;
-      font-size: 11px;
-      line-height: 12px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 21px;
-      top: 50%;
-      margin-top: -10px;
-      right: 10px;
-    }
-  
-    #pagelist label:hover {
-      opacity: 1;
-    }
-    #pagelist > div {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      padding-top: 32px;
-    }
-  </style>
-  <input type="checkbox" name="__pageListInput" id="__pageListInput">
-  <div id="pagelist">
-    <label for="__pageListInput">pages <span>11</span>
-    </label>
-    <div>
-      <ul>
-        <li><a href="/">1.&nbsp;Главная страница</a>
-        </li>
-        <li><a href="/invest.html">2.&nbsp;Инвестиции</a>
-        </li>
-        <li><a href="/trading.html">3.&nbsp;Трейдинг</a>
-        </li>
-        <li><a href="/about.html">4.&nbsp;О компании</a>
-        </li>
-        <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
-        </li>
-        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
-        </li>
-        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
-        </li>
-        <li><a href="/investors.html">8.&nbsp;Инвесторам и&nbsp;акционерам</a>
-        </li>
-        <li><a href="/economist.html">9.&nbsp;Страничка главного экономиста</a>
-        </li>
-        <li><a href="/404.html">10.&nbsp;Страница 404</a>
-        </li>
-        <li><a href="/style.html">11.&nbsp;Страница стилей</a>
-        </li>
-      </ul>
-      <div>
-      </div>
-      <!-- / PageList  -->
-      <script src="javascripts/jquery-3.3.1.min.js"></script>
-      <script src="javascripts/libs.js"></script>
+  <script src="javascripts/jquery-3.3.1.min.js"></script>
+  <script src="javascripts/libs.js"></script>
 
-      <script src="javascripts/common.js"></script>
+  <script src="javascripts/common.js"></script>
 </body>
 
 </html>
