--- a/trading.html
+++ b/trading.html
@@ -112,7 +112,7 @@
     <header class="header">
       <div class="header__row">
         <a href="/" class="header__logo">
-          <img src="images/logo.png" srcset="images/logo2x.png 2x, images/logo3x.png 3x" alt="header__logo-img" class="Руссинвест" />
+          <img src="images/logo.png" srcset="images/logo@2x.png 2x, images/logo@3x.png 3x" alt="header__logo-img" class="Руссинвест" />
         </a>
         <div class="header__col header__col--nav">
           <nav class="nav">
@@ -212,10 +212,10 @@
             которую используют наиболее крупные и&nbsp;успешные брокерские компании. “QUIK” обеспечивает доступ к&nbsp;биржевым торгам как в&nbsp;России, так и&nbsp;за&nbsp;рубежом, позволяя одновременно решать несколько задач.</p>
           <p>
             <a href="#">
-              <img src="uploads/appstorebtn.png" srcset="uploads/appstorebtn2x.png 2x, uploads/appstorebtn3x.png 3x" alt="" />
+              <img src="uploads/appstorebtn.png" srcset="uploads/appstorebtn@2x.png 2x, uploads/appstorebtn@3x.png 3x" alt="" />
             </a>&emsp;
             <a href="#">
-              <img src="uploads/gplaybtn.png" srcset="uploads/gplaybtn2x.png 2x, uploads/gplaybtn3x.png 3x" alt="" />
+              <img src="uploads/gplaybtn.png" srcset="uploads/gplaybtn@2x.png 2x, uploads/gplaybtn@3x.png 3x" alt="" />
             </a>
           </p>
         </div>
@@ -229,7 +229,7 @@
       <div class="pillar-list offset-base">
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/money.png" srcset="uploads/money2x.png 2x, uploads/money3x.png 3x" alt="" />
+            <img src="uploads/money.png" srcset="uploads/money@2x.png 2x, uploads/money@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Система интернет-трейдинга «QUIK»
@@ -241,7 +241,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/briefcase.png" srcset="uploads/briefcase2x.png 2x, uploads/briefcase3x.png 3x" alt="" />
+            <img src="uploads/briefcase.png" srcset="uploads/briefcase@2x.png 2x, uploads/briefcase@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Быстрое открытие счёта
@@ -253,7 +253,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/studio-calculator.png" srcset="uploads/studio-calculator2x.png 2x, uploads/studio-calculator3x.png 3x" alt="" />
+            <img src="uploads/studio-calculator.png" srcset="uploads/studio-calculator@2x.png 2x, uploads/studio-calculator@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Персональный менеджер
@@ -265,7 +265,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/magnifying-glass-on-a-rising-bar-graph.png" srcset="uploads/magnifying-glass-on-a-rising-bar-graph2x.png 2x, uploads/magnifying-glass-on-a-rising-bar-graph3x.png 3x" alt="" />
+            <img src="uploads/magnifying-glass-on-a-rising-bar-graph.png" srcset="uploads/magnifying-glass-on-a-rising-bar-graph@2x.png 2x, uploads/magnifying-glass-on-a-rising-bar-graph@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Обучение клиента стратегиям и&nbsp;тактикам биржевой торговли
@@ -277,7 +277,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/analytics-11.png" srcset="uploads/analytics-112x.png 2x, uploads/analytics-113x.png 3x" alt="" />
+            <img src="uploads/analytics-11.png" srcset="uploads/analytics-11@2x.png 2x, uploads/analytics-11@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Постоянная аналитическая поддержка
@@ -286,7 +286,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/pie_chart_1.png" srcset="uploads/pie_chart_12x.png 2x, uploads/pie_chart_13x.png 3x" alt="" />
+            <img src="uploads/pie_chart_1.png" srcset="uploads/pie_chart_1@2x.png 2x, uploads/pie_chart_1@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Широкая линейка тарифов
@@ -295,7 +295,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/group_7.png" srcset="uploads/group_72x.png 2x, uploads/group_73x.png 3x" alt="" />
+            <img src="uploads/group_7.png" srcset="uploads/group_7@2x.png 2x, uploads/group_7@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Электронная подпись
@@ -304,7 +304,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/five_stars.png" srcset="uploads/five_stars2x.png 2x, uploads/five_stars3x.png 3x" alt="" />
+            <img src="uploads/five_stars.png" srcset="uploads/five_stars@2x.png 2x, uploads/five_stars@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Стабильность
@@ -316,7 +316,7 @@
 
         <div class="pillar">
           <div class="pillar__icon">
-            <img src="uploads/time_left.png" srcset="uploads/time_left2x.png 2x, uploads/time_left3x.png 3x" alt="" />
+            <img src="uploads/time_left.png" srcset="uploads/time_left@2x.png 2x, uploads/time_left@3x.png 3x" alt="" />
           </div>
           <div class="pillar__title">
             Возможность круглосуточного выставления стоп-заявок
@@ -488,7 +488,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo2x.jpg 2x, uploads/AM-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo@2x.jpg 2x, uploads/AM-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Ассоциация Менеджеров</span>
@@ -499,7 +499,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo2x.jpg 2x, uploads/RSPP-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo@2x.jpg 2x, uploads/RSPP-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Российский союз промышленников и&nbsp;предпринимателей</span>
@@ -510,7 +510,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo2x.jpg 2x, uploads/API-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo@2x.jpg 2x, uploads/API-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">АССОЦИАЦИЯ ПРОФЕССИОНАЛЬНЫХ ИНВЕСТОРОВ</span>
@@ -567,156 +567,10 @@
     </div>
   </footer>
 
-  <!--  PageList  -->
-  <style>
-    #pagelist {
-      position: fixed;
-      width: 320px;
-      background-color: #272c31;
-      background: repeating-linear-gradient(
-        45deg,
-        #272c31,
-        #272c31 10px,
-        #2b3136 10px,
-        #2b3136 20px
-      );
-      top: 0;
-      bottom: 0;
-      z-index: 2;
-      font-family: inherit;
-      transform: translateX(-100%);
-      transition: transform .5s, box-shadow .3s;
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0);
-    }
-  
-    #pagelist ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-  
-    #pagelist ul li {
-      display: block;
-    }
-  
-    input[name="__pageListInput"] {
-      display: none;
-      
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist {
-      transform: translateX(0);
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0.27);
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist label {
-      opacity: 1;
-    }
-  
-    #pagelist ul li a{
-      display: block;
-      color: #fff;
-      text-decoration: none;
-      padding: 16px 20px;
-  
-      font-size: 14px;
-      line-height: 18px;
-      transition: color .3s, background-color .3s;
-      border-bottom: 1px solid rgba(255, 255, 255, .05);
-    }
-  
-    #pagelist ul li a:hover {
-      background-color: rgba(0, 0, 0, .35);
-      color: #fff;
-    }
-  
-    #pagelist label{
-      position: absolute;
-      height: 38px;
-      line-height: 36px;
-      background-color: #272c31;
-      left: 100%;
-      top: 0;
-      cursor: pointer;
-      padding-left: 20px;
-      padding-right: 40px;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      font-weight: bold;
-      opacity: .5;
-      transition: opacity .3s;
-      border-top-right-radius: 18px;
-      border-bottom-right-radius: 18px;
-      white-space: nowrap;
-    }
-  
-    #pagelist label span {
-      display: inline-block;
-      vertical-align: middle;
-      background-color: #fff;
-      color: #000;
-      position: absolute;
-      font-size: 11px;
-      line-height: 12px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 21px;
-      top: 50%;
-      margin-top: -10px;
-      right: 10px;
-    }
-  
-    #pagelist label:hover {
-      opacity: 1;
-    }
-    #pagelist > div {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      padding-top: 32px;
-    }
-  </style>
-  <input type="checkbox" name="__pageListInput" id="__pageListInput">
-  <div id="pagelist">
-    <label for="__pageListInput">pages <span>11</span>
-    </label>
-    <div>
-      <ul>
-        <li><a href="/">1.&nbsp;Главная страница</a>
-        </li>
-        <li><a href="/invest.html">2.&nbsp;Инвестиции</a>
-        </li>
-        <li><a href="/trading.html">3.&nbsp;Трейдинг</a>
-        </li>
-        <li><a href="/about.html">4.&nbsp;О компании</a>
-        </li>
-        <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
-        </li>
-        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
-        </li>
-        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
-        </li>
-        <li><a href="/investors.html">8.&nbsp;Инвесторам и&nbsp;акционерам</a>
-        </li>
-        <li><a href="/economist.html">9.&nbsp;Страничка главного экономиста</a>
-        </li>
-        <li><a href="/404.html">10.&nbsp;Страница 404</a>
-        </li>
-        <li><a href="/style.html">11.&nbsp;Страница стилей</a>
-        </li>
-      </ul>
-      <div>
-      </div>
-      <!-- / PageList  -->
-      <script src="javascripts/jquery-3.3.1.min.js"></script>
-      <script src="javascripts/libs.js"></script>
+  <script src="javascripts/jquery-3.3.1.min.js"></script>
+  <script src="javascripts/libs.js"></script>
 
-      <script src="javascripts/common.js"></script>
+  <script src="javascripts/common.js"></script>
 </body>
 
 </html>
