--- a/investors.html
+++ b/investors.html
@@ -112,7 +112,7 @@
     <header class="header">
       <div class="header__row">
         <a href="/" class="header__logo">
-          <img src="images/logo.png" srcset="images/logo2x.png 2x, images/logo3x.png 3x" alt="header__logo-img" class="Руссинвест" />
+          <img src="images/logo.png" srcset="images/logo@2x.png 2x, images/logo@3x.png 3x" alt="header__logo-img" class="Руссинвест" />
         </a>
         <div class="header__col header__col--nav">
           <nav class="nav">
@@ -260,7 +260,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/meeting.png" srcset="uploads/meeting2x.png 2x, uploads/meeting3x.png 3x" alt="" />
+                <img src="uploads/meeting.png" srcset="uploads/meeting@2x.png 2x, uploads/meeting@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Собрание акционеров</p>
               <div class="lined-list__control">
@@ -272,7 +272,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/briefcase2.png" srcset="uploads/briefcase22x.png 2x, uploads/briefcase23x.png 3x" alt="" />
+                <img src="uploads/briefcase2.png" srcset="uploads/briefcase2@2x.png 2x, uploads/briefcase2@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Совет директоров</p>
               <div class="lined-list__control">
@@ -284,7 +284,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/flag-filled-shape.png" srcset="uploads/flag-filled-shape2x.png 2x, uploads/flag-filled-shape3x.png 3x" alt="" />
+                <img src="uploads/flag-filled-shape.png" srcset="uploads/flag-filled-shape@2x.png 2x, uploads/flag-filled-shape@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Правление</p>
               <div class="lined-list__control">
@@ -296,7 +296,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/businessman.png" srcset="uploads/businessman2x.png 2x, uploads/businessman3x.png 3x" alt="" />
+                <img src="uploads/businessman.png" srcset="uploads/businessman@2x.png 2x, uploads/businessman@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Президент-Генеральный директор</p>
               <div class="lined-list__control">
@@ -308,7 +308,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/investment-graph-board.png" srcset="uploads/investment-graph-board2x.png 2x, uploads/investment-graph-board3x.png 3x" alt="" />
+                <img src="uploads/investment-graph-board.png" srcset="uploads/investment-graph-board@2x.png 2x, uploads/investment-graph-board@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Ревизионная комиссия</p>
               <div class="lined-list__control">
@@ -320,7 +320,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/signing-the-contract.png" srcset="uploads/signing-the-contract2x.png 2x, uploads/signing-the-contract3x.png 3x" alt="" />
+                <img src="uploads/signing-the-contract.png" srcset="uploads/signing-the-contract@2x.png 2x, uploads/signing-the-contract@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Внутренний аудит</p>
               <div class="lined-list__control">
@@ -332,7 +332,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/icon-144.png" srcset="uploads/icon-1442x.png 2x, uploads/icon-1443x.png 3x" alt="" />
+                <img src="uploads/icon-144.png" srcset="uploads/icon-144@2x.png 2x, uploads/icon-144@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Аудиторы компании</p>
               <div class="lined-list__control">
@@ -344,7 +344,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/analytics-123.png" srcset="uploads/analytics-1232x.png 2x, uploads/analytics-1233x.png 3x" alt="" />
+                <img src="uploads/analytics-123.png" srcset="uploads/analytics-123@2x.png 2x, uploads/analytics-123@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Политика управления рисками</p>
               <div class="lined-list__control">
@@ -356,7 +356,7 @@
           <a href="/" class="lined-list__item">
             <div class="lined-list__inner">
               <div class="lined-list__icon">
-                <img src="uploads/icon3322.png" srcset="uploads/icon33222x.png 2x, uploads/icon33223x.png 3x" alt="" />
+                <img src="uploads/icon3322.png" srcset="uploads/icon3322@2x.png 2x, uploads/icon3322@3x.png 3x" alt="" />
               </div>
               <p class="lined-list__text">Корпоративная социальная ответственность</p>
               <div class="lined-list__control">
@@ -378,7 +378,7 @@
               <div class="year-reports__title">Отчет за 2016 год</div>
               <div class="year-reports__row">
                 <div class="year-reports__col  year-reports__col--image">
-                  <img src="uploads/yr-img.jpg" srcset="uploads/yr-img2x.jpg 2x, uploads/yr-img3x.jpg 3x" alt="" />
+                  <img src="uploads/yr-img.jpg" srcset="uploads/yr-img@2x.jpg 2x, uploads/yr-img@3x.jpg 3x" alt="" />
                 </div>
                 <div class="year-reports__col">
                   <div class="news news--variant-file">
@@ -546,7 +546,7 @@
               <div class="person-list__item person-list__item--1of2  is-active">
                 <div class="person">
                   <div class="person__image">
-                    <img src="uploads/23232323.jpg" srcset="uploads/232323232x.jpg 2x, uploads/232323233x.jpg 3x" alt="" />
+                    <img src="uploads/23232323.jpg" srcset="uploads/23232323@2x.jpg 2x, uploads/23232323@3x.jpg 3x" alt="" />
                   </div>
                   <div class="person__data">
                     <div class="person__name">Анатолий Александрович Пороховский</div>
@@ -558,7 +558,7 @@
               <div class="person-list__item person-list__item--1of2 ">
                 <div class="person">
                   <div class="person__image">
-                    <img src="uploads/bitmap-copy-612.jpg" srcset="uploads/bitmap-copy-6122x.jpg 2x, uploads/bitmap-copy-6123x.jpg 3x" alt="" />
+                    <img src="uploads/bitmap-copy-612.jpg" srcset="uploads/bitmap-copy-612@2x.jpg 2x, uploads/bitmap-copy-612@3x.jpg 3x" alt="" />
                   </div>
                   <div class="person__data">
                     <div class="person__name">Ольга Ильина</div>
@@ -681,7 +681,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo2x.jpg 2x, uploads/AM-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo@2x.jpg 2x, uploads/AM-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Ассоциация Менеджеров</span>
@@ -692,7 +692,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo2x.jpg 2x, uploads/RSPP-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo@2x.jpg 2x, uploads/RSPP-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Российский союз промышленников и&nbsp;предпринимателей</span>
@@ -703,7 +703,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo2x.jpg 2x, uploads/API-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo@2x.jpg 2x, uploads/API-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">АССОЦИАЦИЯ ПРОФЕССИОНАЛЬНЫХ ИНВЕСТОРОВ</span>
@@ -760,156 +760,10 @@
     </div>
   </footer>
 
-  <!--  PageList  -->
-  <style>
-    #pagelist {
-      position: fixed;
-      width: 320px;
-      background-color: #272c31;
-      background: repeating-linear-gradient(
-        45deg,
-        #272c31,
-        #272c31 10px,
-        #2b3136 10px,
-        #2b3136 20px
-      );
-      top: 0;
-      bottom: 0;
-      z-index: 2;
-      font-family: inherit;
-      transform: translateX(-100%);
-      transition: transform .5s, box-shadow .3s;
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0);
-    }
-  
-    #pagelist ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-  
-    #pagelist ul li {
-      display: block;
-    }
-  
-    input[name="__pageListInput"] {
-      display: none;
-      
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist {
-      transform: translateX(0);
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0.27);
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist label {
-      opacity: 1;
-    }
-  
-    #pagelist ul li a{
-      display: block;
-      color: #fff;
-      text-decoration: none;
-      padding: 16px 20px;
-  
-      font-size: 14px;
-      line-height: 18px;
-      transition: color .3s, background-color .3s;
-      border-bottom: 1px solid rgba(255, 255, 255, .05);
-    }
-  
-    #pagelist ul li a:hover {
-      background-color: rgba(0, 0, 0, .35);
-      color: #fff;
-    }
-  
-    #pagelist label{
-      position: absolute;
-      height: 38px;
-      line-height: 36px;
-      background-color: #272c31;
-      left: 100%;
-      top: 0;
-      cursor: pointer;
-      padding-left: 20px;
-      padding-right: 40px;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      font-weight: bold;
-      opacity: .5;
-      transition: opacity .3s;
-      border-top-right-radius: 18px;
-      border-bottom-right-radius: 18px;
-      white-space: nowrap;
-    }
-  
-    #pagelist label span {
-      display: inline-block;
-      vertical-align: middle;
-      background-color: #fff;
-      color: #000;
-      position: absolute;
-      font-size: 11px;
-      line-height: 12px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 21px;
-      top: 50%;
-      margin-top: -10px;
-      right: 10px;
-    }
-  
-    #pagelist label:hover {
-      opacity: 1;
-    }
-    #pagelist > div {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      padding-top: 32px;
-    }
-  </style>
-  <input type="checkbox" name="__pageListInput" id="__pageListInput">
-  <div id="pagelist">
-    <label for="__pageListInput">pages <span>11</span>
-    </label>
-    <div>
-      <ul>
-        <li><a href="/">1.&nbsp;Главная страница</a>
-        </li>
-        <li><a href="/invest.html">2.&nbsp;Инвестиции</a>
-        </li>
-        <li><a href="/trading.html">3.&nbsp;Трейдинг</a>
-        </li>
-        <li><a href="/about.html">4.&nbsp;О компании</a>
-        </li>
-        <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
-        </li>
-        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
-        </li>
-        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
-        </li>
-        <li><a href="/investors.html">8.&nbsp;Инвесторам и&nbsp;акционерам</a>
-        </li>
-        <li><a href="/economist.html">9.&nbsp;Страничка главного экономиста</a>
-        </li>
-        <li><a href="/404.html">10.&nbsp;Страница 404</a>
-        </li>
-        <li><a href="/style.html">11.&nbsp;Страница стилей</a>
-        </li>
-      </ul>
-      <div>
-      </div>
-      <!-- / PageList  -->
-      <script src="javascripts/jquery-3.3.1.min.js"></script>
-      <script src="javascripts/libs.js"></script>
+  <script src="javascripts/jquery-3.3.1.min.js"></script>
+  <script src="javascripts/libs.js"></script>
 
-      <script src="javascripts/common.js"></script>
+  <script src="javascripts/common.js"></script>
 </body>
 
 </html>
