--- a/style.html
+++ b/style.html
@@ -112,7 +112,7 @@
     <header class="header">
       <div class="header__row">
         <a href="/" class="header__logo">
-          <img src="images/logo.png" srcset="images/logo2x.png 2x, images/logo3x.png 3x" alt="header__logo-img" class="Руссинвест" />
+          <img src="images/logo.png" srcset="images/logo@2x.png 2x, images/logo@3x.png 3x" alt="header__logo-img" class="Руссинвест" />
         </a>
         <div class="header__col header__col--nav">
           <nav class="nav">
@@ -534,77 +534,77 @@
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap222.png" srcset="uploads/bitmap2222x.png 2x, uploads/bitmap2223x.png 3x" alt="" />Сбербанк</td>
+                  <img src="uploads/bitmap222.png" srcset="uploads/bitmap222@2x.png 2x, uploads/bitmap222@3x.png 3x" alt="" />Сбербанк</td>
                 <td>188,64</td>
                 <td>70 644</td>
                 <td>
-                  <img src="uploads/shape244.png" srcset="uploads/shape2442x.png 2x, uploads/shape2443x.png 3x" alt="" />
+                  <img src="uploads/shape244.png" srcset="uploads/shape244@2x.png 2x, uploads/shape244@3x.png 3x" alt="" />
                   <span class="color-red">-0.29%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap226.jpg" srcset="uploads/bitmap2262x.jpg 2x, uploads/bitmap2263x.jpg 3x" alt="" />Роснефть</td>
+                  <img src="uploads/bitmap226.jpg" srcset="uploads/bitmap226@2x.jpg 2x, uploads/bitmap226@3x.jpg 3x" alt="" />Роснефть</td>
                 <td>319,3</td>
                 <td>58 795</td>
                 <td>
-                  <img src="uploads/shape245.png" srcset="uploads/shape2452x.png 2x, uploads/shape2453x.png 3x" alt="" />
+                  <img src="uploads/shape245.png" srcset="uploads/shape245@2x.png 2x, uploads/shape245@3x.png 3x" alt="" />
                   <span class="color-green">1.45%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap227.png" srcset="uploads/bitmap2272x.png 2x, uploads/bitmap2273x.png 3x" alt="" />Газпром</td>
+                  <img src="uploads/bitmap227.png" srcset="uploads/bitmap227@2x.png 2x, uploads/bitmap227@3x.png 3x" alt="" />Газпром</td>
                 <td>2970</td>
                 <td>50 444</td>
                 <td>
-                  <img src="uploads/shape244.png" srcset="uploads/shape2442x.png 2x, uploads/shape2443x.png 3x" alt="" />
+                  <img src="uploads/shape244.png" srcset="uploads/shape244@2x.png 2x, uploads/shape244@3x.png 3x" alt="" />
                   <span class="color-red">-0.18%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap22221.png" srcset="uploads/bitmap222212x.png 2x, uploads/bitmap222213x.png 3x" alt="" />ЛУКОЙЛ</td>
+                  <img src="uploads/bitmap22221.png" srcset="uploads/bitmap22221@2x.png 2x, uploads/bitmap22221@3x.png 3x" alt="" />ЛУКОЙЛ</td>
                 <td>123,33</td>
                 <td>45 778</td>
                 <td>
-                  <img src="uploads/shape245.png" srcset="uploads/shape2452x.png 2x, uploads/shape2453x.png 3x" alt="" />
+                  <img src="uploads/shape245.png" srcset="uploads/shape245@2x.png 2x, uploads/shape245@3x.png 3x" alt="" />
                   <span class="color-green">1.45%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap2221.png" srcset="uploads/bitmap22212x.png 2x, uploads/bitmap22213x.png 3x" alt="" />НОВАТЭК</td>
+                  <img src="uploads/bitmap2221.png" srcset="uploads/bitmap2221@2x.png 2x, uploads/bitmap2221@3x.png 3x" alt="" />НОВАТЭК</td>
                 <td>606,1</td>
                 <td>34 780</td>
                 <td>
-                  <img src="uploads/shape245.png" srcset="uploads/shape2452x.png 2x, uploads/shape2453x.png 3x" alt="" />
+                  <img src="uploads/shape245.png" srcset="uploads/shape245@2x.png 2x, uploads/shape245@3x.png 3x" alt="" />
                   <span class="color-green">1.45%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap2222.png" srcset="uploads/bitmap22222x.png 2x, uploads/bitmap22223x.png 3x" alt="" />ГМК НорНикель</td>
+                  <img src="uploads/bitmap2222.png" srcset="uploads/bitmap2222@2x.png 2x, uploads/bitmap2222@3x.png 3x" alt="" />ГМК НорНикель</td>
                 <td>188,64</td>
                 <td>18 000</td>
                 <td>
-                  <img src="uploads/shape244.png" srcset="uploads/shape2442x.png 2x, uploads/shape2443x.png 3x" alt="" />
+                  <img src="uploads/shape244.png" srcset="uploads/shape244@2x.png 2x, uploads/shape244@3x.png 3x" alt="" />
                   <span class="color-red">-0.18%</span>
                 </td>
               </tr>
 
               <tr>
                 <td>
-                  <img src="uploads/bitmap227.png" srcset="uploads/bitmap2272x.png 2x, uploads/bitmap2273x.png 3x" alt="" />Газпромнефть</td>
+                  <img src="uploads/bitmap227.png" srcset="uploads/bitmap227@2x.png 2x, uploads/bitmap227@3x.png 3x" alt="" />Газпромнефть</td>
                 <td>123,64</td>
                 <td>4 900</td>
                 <td>
-                  <img src="uploads/shape245.png" srcset="uploads/shape2452x.png 2x, uploads/shape2453x.png 3x" alt="" />
+                  <img src="uploads/shape245.png" srcset="uploads/shape245@2x.png 2x, uploads/shape245@3x.png 3x" alt="" />
                   <span class="color-green">1.45%</span>
                 </td>
               </tr>
@@ -1322,7 +1322,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo2x.jpg 2x, uploads/AM-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/AM-logo.jpg" srcset="uploads/AM-logo@2x.jpg 2x, uploads/AM-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Ассоциация Менеджеров</span>
@@ -1333,7 +1333,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo2x.jpg 2x, uploads/RSPP-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/RSPP-logo.jpg" srcset="uploads/RSPP-logo@2x.jpg 2x, uploads/RSPP-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">Российский союз промышленников и&nbsp;предпринимателей</span>
@@ -1344,7 +1344,7 @@
           <a class="partner" target="_blank" href="/">
             <span class="partner__logo">
 
-              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo2x.jpg 2x, uploads/API-logo3x.jpg 3x" alt=""   />
+              <img src="uploads/API-logo.jpg" srcset="uploads/API-logo@2x.jpg 2x, uploads/API-logo@3x.jpg 3x" alt=""   />
 
             </span>
             <span class="partner__name">АССОЦИАЦИЯ ПРОФЕССИОНАЛЬНЫХ ИНВЕСТОРОВ</span>
@@ -1401,156 +1401,10 @@
     </div>
   </footer>
 
-  <!--  PageList  -->
-  <style>
-    #pagelist {
-      position: fixed;
-      width: 320px;
-      background-color: #272c31;
-      background: repeating-linear-gradient(
-        45deg,
-        #272c31,
-        #272c31 10px,
-        #2b3136 10px,
-        #2b3136 20px
-      );
-      top: 0;
-      bottom: 0;
-      z-index: 2;
-      font-family: inherit;
-      transform: translateX(-100%);
-      transition: transform .5s, box-shadow .3s;
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0);
-    }
-  
-    #pagelist ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-  
-    #pagelist ul li {
-      display: block;
-    }
-  
-    input[name="__pageListInput"] {
-      display: none;
-      
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist {
-      transform: translateX(0);
-      box-shadow: 8px 0 20px rgba(0, 0, 0, 0.27);
-    }
-  
-    input[name="__pageListInput"]:checked + #pagelist label {
-      opacity: 1;
-    }
-  
-    #pagelist ul li a{
-      display: block;
-      color: #fff;
-      text-decoration: none;
-      padding: 16px 20px;
-  
-      font-size: 14px;
-      line-height: 18px;
-      transition: color .3s, background-color .3s;
-      border-bottom: 1px solid rgba(255, 255, 255, .05);
-    }
-  
-    #pagelist ul li a:hover {
-      background-color: rgba(0, 0, 0, .35);
-      color: #fff;
-    }
-  
-    #pagelist label{
-      position: absolute;
-      height: 38px;
-      line-height: 36px;
-      background-color: #272c31;
-      left: 100%;
-      top: 0;
-      cursor: pointer;
-      padding-left: 20px;
-      padding-right: 40px;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      font-weight: bold;
-      opacity: .5;
-      transition: opacity .3s;
-      border-top-right-radius: 18px;
-      border-bottom-right-radius: 18px;
-      white-space: nowrap;
-    }
-  
-    #pagelist label span {
-      display: inline-block;
-      vertical-align: middle;
-      background-color: #fff;
-      color: #000;
-      position: absolute;
-      font-size: 11px;
-      line-height: 12px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 21px;
-      top: 50%;
-      margin-top: -10px;
-      right: 10px;
-    }
-  
-    #pagelist label:hover {
-      opacity: 1;
-    }
-    #pagelist > div {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow-y: auto;
-      padding-top: 32px;
-    }
-  </style>
-  <input type="checkbox" name="__pageListInput" id="__pageListInput">
-  <div id="pagelist">
-    <label for="__pageListInput">pages <span>11</span>
-    </label>
-    <div>
-      <ul>
-        <li><a href="/">1.&nbsp;Главная страница</a>
-        </li>
-        <li><a href="/invest.html">2.&nbsp;Инвестиции</a>
-        </li>
-        <li><a href="/trading.html">3.&nbsp;Трейдинг</a>
-        </li>
-        <li><a href="/about.html">4.&nbsp;О компании</a>
-        </li>
-        <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
-        </li>
-        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
-        </li>
-        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
-        </li>
-        <li><a href="/investors.html">8.&nbsp;Инвесторам и&nbsp;акционерам</a>
-        </li>
-        <li><a href="/economist.html">9.&nbsp;Страничка главного экономиста</a>
-        </li>
-        <li><a href="/404.html">10.&nbsp;Страница 404</a>
-        </li>
-        <li><a href="/style.html">11.&nbsp;Страница стилей</a>
-        </li>
-      </ul>
-      <div>
-      </div>
-      <!-- / PageList  -->
-      <script src="javascripts/jquery-3.3.1.min.js"></script>
-      <script src="javascripts/libs.js"></script>
+  <script src="javascripts/jquery-3.3.1.min.js"></script>
+  <script src="javascripts/libs.js"></script>
 
-      <script src="javascripts/common.js"></script>
+  <script src="javascripts/common.js"></script>
 </body>
 
 </html>
